--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <div class="jumbotron jumbotron-fluid" style="background-color: #ffffff; text-align: center;">
         <h1 class="display-4">News at <span style="color: #004D40"><strong id="jumbotronTitleEnding">Equilibrium.</strong></span></h1>
         <p class="lead">Mission Statement: We strive to provide a nonpartisan tool to provide balanced viewpoints on the news.</p>
-        <p class="lead">Powered by Newsapi</p>
+        <p>Powered by News API</p>
     </div>
     <div class="row">
         <div class="col-md-4 col-sm-2"></div>
